<resources>
    <string name="app_name">Is That Easy</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="p5">P5</string>
    <string name="p6">P6</string>
    <string name="btn_continue">Continue</string>
    <string name="isthateasy">IsThatEasy</string>
    <string name="select_level">Select Level</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasktitle">TaskTitle</string>
    <string name="level">level</string>
    <string name="attempt">Attempt</string>
    <string name="teacher_name">teacher name</string>
    <string name="course">course</string>
    <string name="topic">topic</string>
    <string name="in_this_field_will_be_filled_with_description">in this field will be filled with description</string>
    <string-array name="levels">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
        <item>P4</item>
        <item>P5</item>
        <item>P6</item>
    </string-array>
    <string-array name="courses">
        <item>Math</item>
        <item>Science</item>
        <item>Kinyarwanda</item>
        <item>English</item>
    </string-array>
    <string-array name="topics">
        <item>Topic 1</item>
        <item>Topic 2</item>
        <item>Topic 3</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="school_name">SCHOOL NAME</string>
</resources>